# sp1-dkim

elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  email1.eml
